molecule/end-to-end_demo/deploy_files/grafana/ingress-to-grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana-ns 
  annotations:
    cert-manager.io/cluster-issuer: "root-ca-issuer"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.k8s.myorg.com
    secretName: grafana-tls
  rules:
  - host: grafana.k8s.myorg.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
